# peerchat

./: CMakeLists.txt  README.md  ed25519.hpp  imgui.ini  mainclient.cpp  mainserver.cpp  protocal.hpp
clientbuild/: CMakeCache.txt  Makefile  client  cmake_install.cmake  imgui.ini
serverbuild/: CMakeCache.txt  Makefile  cmake_install.cmake  server
unittest/: serializers.cpp
